@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-04T16:08:25Z",
+  "timestamp" : "2023-09-05T16:08:56Z",
   "count_outdated" : 1337,
   "uniques_outdated" : 719,
-  "count" : 1351,
-  "uniques" : 728,
+  "count" : 1353,
+  "uniques" : 730,
   "clones" : [
     {
       "timestamp": "2023-08-28T00:00:00Z",
@@ -75,6 +75,15 @@
       "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     }
   ]
