@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 2,
+  "count": 16,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-08-28T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2023-09-04T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
