@@ -1,3 +1,12 @@
+2023-09-05T16:08:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6087127951 # 1888
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
+* notice: last 14d: unq all: 3 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 719 1337 / 728 1351
+* notice: next accum: outdated-unq outdated-all / unq all: 719 1337 / 730 1353
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-05]
+
 2023-09-04T16:08:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6075674538 # 1885
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
